# MeetingBot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  VERSION  docker-compose.yml  railway.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: lint.yml  openapi-check.yml  sdk-gen.yml  security.yml  test.yml
api/: openapi.admin.json  openapi.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  init_db.py  nixpacks.toml  openapi.json  pyproject.toml  railway.toml  requirements-crypto.txt  requirements-dev.txt  requirements.txt  ruff.toml  start.sh
backend/alembic/: README.md  env.py
backend/app/: _limiter.py  config.py  database.py  db.py  deps.py  main.py  observability.py  redis_store.py  store.py  store_interface.py
backend/frontend/: app.js  index.html  style.css
backend/tests/: conftest.py  test_action_item_reminders.py  test_admin_aggregation.py  test_admin_analytics_merge.py  test_advanced_features.py  test_alembic_migrations.py  test_auth.py  test_authz_isolation.py  test_bot_serde.py  test_bots.py  test_bulk_operations.py  test_canary_service.py  test_capture_provider.py  test_config.py  (+27 more)
docs/: API.md  MCP.md  README.md  SDKs.md  meeting-bot-research-gap-analysis-2026-06-24.md  redis-scale-out.md
frontend/: app.js  index.html  style.css
scripts/: canary.py  generate_openapi.py  generate_sdks.sh
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/meetingbot/: __init__.py  async_client.py  client.py  exceptions.py  models.py  webhooks.py
(+112 files in other folders)
